--- a/checkout.html
+++ b/checkout.html
@@ -451,7 +451,9 @@
 
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
-		<script src="js/custom.js"></script>
-	</body>
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Custom JS file -->
+    <script src="js/custom.js"></script>	</body>
 
 </html>
