--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
 
 <body class="text-center">
     <form class="form-signin" id="loginForm">
-        <img class="mb-4" src="images/fruits/DALL·E 2024-04-18 23.45.37 - Design a modern logo for a grocery store called 'freshFinds'. The logo should feature a stylized, minimalistic leaf integrated with the text 'freshFin.png" alt="" width="72"
+        <img class="mb-4" src="images/fruits/logo-image.png" alt="" width="72"
             height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
