fixed minor issues and login page fixed as well

--- a/cart.html
+++ b/cart.html
@@ -49,7 +49,8 @@
 				</ul>
 
 				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
+					<li><a class="nav-link" href="login.html" id="profile-icon" ><img
+						src="images/user.svg"></a></li>
 					<li><a class="nav-link" href="#" id="logout-icon"><i class="fa fa-sign-out link-light"
 								aria-hidden="true"></i></a></li>
 					<li><a class="nav-link active" href="cart.html"><img src="images/cart.svg"></a></li>
