--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</ul>
 
 				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="login.html" id="profile-icon" onclick="return checkLogin();"><img
+					<li><a class="nav-link" href="login.html" id="profile-icon" ><img
 								src="images/user.svg"></a></li>
 					<li><a class="nav-link" href="#" id="logout-icon"><i class="fa fa-sign-out link-light"
 								aria-hidden="true"></i></a></li>
