--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 				<!-- Start Column 2 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
+						<img src="images/fruits/Apple.png"
 							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<h3 class="product-title">Apple</h3>
 						<strong class="product-price">$3.00 per bunch</strong>
 						<span class="icon-cross">
 							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
