--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
 						<img src="images/fruits/Apple.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
+							class="img-fluid product-thumbnail" alt="Fresh Apples">
 						<h3 class="product-title">Apple</h3>
 						<strong class="product-price">$3.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Apples"
 								data-price="3.00">
 						</span>
 					</a>
@@ -122,11 +122,11 @@
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
 						<img src="images/fruits/Avocado.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
+							class="img-fluid product-thumbnail" alt="Fresh Avocados">
 						<h3 class="product-title">Avocado</h3>
 						<strong class="product-price">$4.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Avocados"
 								data-price="4.00">
 						</span>
 					</a>
