--- a/shop.html
+++ b/shop.html
@@ -83,12 +83,12 @@
 				<!-- Start Column 1 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<img src="images/fruits/Apple.png"
+							class="img-fluid product-thumbnail" alt="Fresh Apple">
+						<h3 class="product-title">Apple</h3>
 						<strong class="product-price">$6.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Apple"
 								data-price="6.00">
 						</span>
 					</a>
@@ -104,7 +104,7 @@
 						<strong class="product-price">$4.00 per bunch</strong>
 						<span class="icon-cross">
 							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
-								data-price="4.00">
+								data-price="5.00">
 						</span>
 					</a>
 				</div>
