--- a/shop.html
+++ b/shop.html
@@ -101,7 +101,7 @@
 						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
 							class="img-fluid product-thumbnail" alt="Fresh Bananas">
 						<h3 class="product-title">Banana</h3>
-						<strong class="product-price">$4.00 per bunch</strong>
+						<strong class="product-price">$5.00 per bunch</strong>
 						<span class="icon-cross">
 							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
 								data-price="5.00">
@@ -113,12 +113,12 @@
 				<!-- Start Column 3 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<img src="images/fruits/Mango.png"
+							class="img-fluid product-thumbnail" alt="Fresh Mangoes">
+						<h3 class="product-title">Mango</h3>
 						<strong class="product-price">$9.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh mangoes"
 								data-price="9.00">
 						</span>
 					</a>
@@ -128,12 +128,12 @@
 				<!-- Start Column 4 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<img src="images/fruits/Pear.png"
+							class="img-fluid product-thumbnail" alt="Fresh Pears">
+						<h3 class="product-title">Pear</h3>
 						<strong class="product-price">$1.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Pears"
 								data-price="1.00">
 						</span>
 					</a>
@@ -141,12 +141,12 @@
 				<!-- End Column 4 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<img src="https://www.pngarts.com/files/4/Plum-PNG-Picture.png"
+							class="img-fluid product-thumbnail" alt="Fresh Plums">
+						<h3 class="product-title">Plums</h3>
 						<strong class="product-price">$3.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Plums"
 								data-price="3.00">
 						</span>
 					</a>
