--- a/shop.html
+++ b/shop.html
@@ -154,12 +154,12 @@
 				<!-- Start Column 2 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<img src="images/fruits/Lettuce.png"
+							class="img-fluid product-thumbnail" alt="Fresh Lettuce">
+						<h3 class="product-title">Lettuce</h3>
 						<strong class="product-price">$2.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Lettuce"
 								data-price="2.00">
 						</span>
 					</a>
