--- a/services.html
+++ b/services.html
@@ -66,8 +66,8 @@
 			<h1>Let's Explore FreshFinds Services!</h1>
 			<h6 class="mb-4 text-light opacity-75">Where Freshness Meets Convenience.</h6>
 			<p>
-				<a href="#" class="btn btn-secondary me-2">Shop Now</a>
-				<a href="#" class="btn btn-white-outline">Explore</a>
+				<a href="shop.html" class="btn btn-secondary me-2">Shop Now</a>
+				<a href="about.html" class="btn btn-white-outline">Explore</a>
 			</p>
 		</div>
 	</div>
