--- a/shop.html
+++ b/shop.html
@@ -169,12 +169,12 @@
 				<!-- Start Column 3 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
-						<h3 class="product-title">Banana</h3>
+						<img src="images/fruits/Carrot.png"
+							class="img-fluid product-thumbnail" alt="Fresh Carrots">
+						<h3 class="product-title">Carrots</h3>
 						<strong class="product-price">$3.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Carrots"
 								data-price="3.00">
 						</span>
 					</a>
@@ -184,12 +184,12 @@
 				<!-- Start Column 4 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Bananas">
+						<img src="images/fruits/Cauliflower.png"
+							class="img-fluid product-thumbnail" alt="Fresh Cauliflower">
 						<h3 class="product-title">Banana</h3>
 						<strong class="product-price">$7.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Cauliflower"
 								data-price="7.00">
 						</span>
 					</a>
