price information changed

--- a/shop.html
+++ b/shop.html
@@ -186,7 +186,7 @@
 					<a class="product-item" href="#">
 						<img src="images/fruits/Cauliflower.png"
 							class="img-fluid product-thumbnail" alt="Fresh Cauliflower">
-						<h3 class="product-title">Banana</h3>
+						<h3 class="product-title">Cauliflower</h3>
 						<strong class="product-price">$7.00 per bunch</strong>
 						<span class="icon-cross">
 							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Cauliflower"
