--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
 
 				<!-- Start Column 3 -->
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/team/1688806441488.jpeg" class="img-fluid mb-5">
+					<img src="images/team/jithin.jpeg" class="img-fluid mb-5">
 					<h3 clas><a href="#"><span class="">Jithin</span> Vinod</a></h3>
 					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
 					<p>Separated they live in.
