--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
 
 				<!-- Start Column 4 -->
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/team/WhatsApp Image 2024-04-19 at 20.58.53.jpeg" class="img-fluid mb-5">
+					<img src="images/team/vishakh.jpeg" class="img-fluid mb-5">
 
 					<h3 clas><a href="#"><span class="">Vishakh</span> T Varghese</a></h3>
 					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
