--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
 
 				<!-- Start Column 1 -->
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/team/WhatsApp Image 2024-04-19 at 20.57.24.jpeg" class="img-fluid mb-5">
+					<img src="images/team/albin.jpeg" class="img-fluid mb-5">
 					<h3 clas><a href="#"><span class="">Albin</span>Martin</a></h3>
 					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
 					<p>Separated they live in.
