--- a/services.html
+++ b/services.html
@@ -176,61 +176,64 @@
 	<!-- End Why Choose Us Section -->
 
 	<!-- Start Product Section -->
-	<div class="product-section pt-0">
+	<div class="product-section">
 		<div class="container">
 			<div class="row">
 
 				<!-- Start Column 1 -->
 				<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-					<h2 class="mb-4 section-title">Featured Grocery Selections</h2>
-					<p class="mb-4">Explore our carefully selected range of fresh produce, organic foods, and artisan
-						products. Each item is chosen for its quality and sustainability.</p>
-					<p><a href="#" class="btn">Explore</a></p>
+					<h2 class="mb-4 section-title">Explore FreshFinds</h2>
+					<p class="mb-4">At freshFinds, we are committed to bringing you the freshest, highest quality
+						groceries at great prices. Discover a wide selection of organic, locally-sourced, and exotic
+						products that cater to all your culinary needs.</p>
+					<p><a href="shop.html" class="btn">Explore</a></p>
 				</div>
 				<!-- End Column 1 -->
 
 				<!-- Start Column 2 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Organic Honey">
-						<h3 class="product-title">Organic Honey</h3>
-						<strong class="product-price">$15.00</strong>
+						<img src="images/fruits/Apple.png"
+							class="img-fluid product-thumbnail" alt="Fresh Apples">
+						<h3 class="product-title">Apple</h3>
+						<strong class="product-price">$3.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid">
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Apples"
+								data-price="3.00">
 						</span>
 					</a>
 				</div>
 				<!-- End Column 2 -->
 
-				<!-- Start Column 3 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<!-- Start Column 2 -->
+				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
 						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Fresh Blueberries">
-						<h3 class="product-title">Fresh Blueberries</h3>
-						<strong class="product-price">$8.00</strong>
+							class="img-fluid product-thumbnail" alt="Fresh Bananas">
+						<h3 class="product-title">Banana</h3>
+						<strong class="product-price">$5.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid">
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Bananas"
+								data-price="5.00">
 						</span>
 					</a>
 				</div>
-				<!-- End Column 3 -->
+				<!-- End Column 2 -->
 
-				<!-- Start Column 4 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<!-- Start Column 2 -->
+				<div class="col-12 col-md-4 col-lg-3 mb-5">
 					<a class="product-item" href="#">
-						<img src="images/fruits/banana-cluster-isolated-600nw-575528746-removebg-preview.png"
-							class="img-fluid product-thumbnail" alt="Artisan Bread">
-						<h3 class="product-title">Artisan Bread</h3>
-						<strong class="product-price">$6.00</strong>
+						<img src="images/fruits/Avocado.png"
+							class="img-fluid product-thumbnail" alt="Fresh Avocados">
+						<h3 class="product-title">Avocado</h3>
+						<strong class="product-price">$4.00 per bunch</strong>
 						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid">
+							<img src="images/cross.svg" class="img-fluid add-to-cart" data-name="Fresh Avocados"
+								data-price="4.00">
 						</span>
 					</a>
 				</div>
-				<!-- End Column 4 -->
-
+				<!-- End Column 2 -->
 			</div>
 		</div>
 	</div>
