--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
 
 				<!-- Start Column 2 -->
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
-					<img src="images/team/george.jpg" class="img-fluid mb-5">
+					<img src="images/team/george.jpeg" class="img-fluid mb-5">
 
 					<h3 clas><a href="#"><span class="">George</span> Thomas</a></h3>
 					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
