--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
 					<img src="images/team/albin.jpeg" class="img-fluid mb-5">
 					<h3 clas><a href="#"><span class="">Albin</span>Martin</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+					<span class="d-block position mb-4">CEO, Founder</span>
 					<p>Separated they live in.
 						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
 						ocean.</p>
