--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
 					<img src="images/team/george.jpeg" class="img-fluid mb-5">
 
 					<h3 clas><a href="#"><span class="">George</span> Thomas</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+					<span class="d-block position mb-4">Backend Developer</span>
 					<p>Separated they live in.
 						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
 						ocean.</p>
