--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
 				<div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
 					<img src="images/team/jithin.jpeg" class="img-fluid mb-5">
 					<h3 clas><a href="#"><span class="">Jithin</span> Vinod</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+					<span class="d-block position mb-4">Backend Developer</span>
 					<p>Separated they live in.
 						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
 						ocean.</p>
