--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
 					<img src="images/team/vishakh.jpeg" class="img-fluid mb-5">
 
 					<h3 clas><a href="#"><span class="">Vishakh</span> T Varghese</a></h3>
-					<span class="d-block position mb-4">CEO, Founder, Atty.</span>
+					<span class="d-block position mb-4">Marketing Manger</span>
 					<p>Separated they live in.
 						Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
 						ocean.</p>
